--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
   "dependencies": {
     "ejs": "^2.6.2",
     "express": "^4.17.1",
-    "express-ejs-layouts": "^2.5.0"
+    "express-ejs-layouts": "^2.5.0",
+    "mongoose": "^5.6.6"
+  },
+  "devDependencies": {
+    "dotenv": "^8.0.0"
   }
 }
