--- a/package.json
+++ b/package.json
@@ -1,21 +1,30 @@
 {
-  "name": "Fullstack-Bookstore-App",
+  "name": "mybrary",
   "version": "1.0.0",
-  "description": "",
+  "description": "Mybrary Application",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Jerry Doran",
   "license": "ISC",
   "dependencies": {
-    "ejs": "^2.6.2",
+    "ejs": "^2.7.1",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
+    "express-layouts": "^1.0.0",
     "mongoose": "^5.6.6"
   },
   "devDependencies": {
-    "dotenv": "^8.0.0"
-  }
+    "dotenv": "^8.2.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/disneyfan9184/Mybrary.git"
+  },
+  "bugs": {
+    "url": "https://github.com/disneyfan9184/Mybrary/issues"
+  },
+  "homepage": "https://github.com/disneyfan9184/Mybrary#readme"
 }
