--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
     "express-layouts": "^1.0.0",
+    "method-override": "^3.0.0",
     "mongoose": "^5.6.6",
     "multer": "^1.4.2"
   },
